Cambio colore "the booleaner" con span

--- a/app.css/index.css
+++ b/app.css/index.css
@@ -8,6 +8,8 @@
     font-size: 230%;
 }
 .fonte{
- color: black;
- opacity: 50%;
+ color: rgb(151, 151, 151);
+}
+#thebooleaner {
+    color: rgb(88, 133, 255);
 }
