--- a/app.css/index.css
+++ b/app.css/index.css
@@ -21,3 +21,31 @@ thead{
     background-color: rgb(84, 255, 255);
     color: black;
 }
+tbody{
+    border-width: style 5cm;
+}
+#monitor {
+    margin: 0px;
+    background-image: url('../img/monitor.jpg');
+    background-repeat: no-repeat;
+    color: #FFFFFF;
+    font-size: 140%;
+    font-weight: normal;
+    line-height: 260px;
+    text-align: left;
+    width: 240px;
+    height: 150px;
+  }
+  #schermata{
+    margin: 0px;
+    background-image: url('../img/graph.jpg');
+    background-repeat: no-repeat;
+    color: #FFFFFF;
+    font-size: 140%;
+    font-weight: normal;
+    line-height: 260px;
+    text-align: left;
+    width: 240px;
+    height: 150px;
+
+  }
